<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/numberOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/view"
            android:inputType="numberDecimal"
            android:hint="@string/numberOne"/>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true" />

        <EditText
            android:id="@+id/numberTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/view"
            android:inputType="numberDecimal"
            android:hint="@string/numberTwo"/>

    </RelativeLayout>

    <RadioGroup
        android:id="@+id/actionRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/sumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sumButton" />

        <RadioButton
            android:id="@+id/subtractionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtractionButton" />

        <RadioButton
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplyButton" />

        <RadioButton
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divideButton" />
    </RadioGroup>

    <Button
        android:id="@+id/resultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultText"
        android:hint="@string/resultText"/>

</LinearLayout>